--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -124,23 +124,23 @@ background-color: #0038ba;
 /**Yellow btn**/
 .btn-primary.yellow {
     background: #ebaf41;
-    color: #153559;
+    color: #fff;
 }
 .btn-primary.yellow:hover {
 background-color: #F0C161;
 }
 .btn-outline-primary.yellow {
     border: 2px solid #EBAF41;
-    color: #153559;
+    color: #EBAF41;
 }
 .btn-outline-primary.yellow:hover {
     background-color: #F0C161;
-    color: #153559;
+    color: #fff;
 }
 /**Green btn**/
 .btn-primary.green{
     background: #31B096;
-    color: #153559;
+    color: #fff;
 }
 .btn-primary.green:hover {
 background-color: #1f7060;
@@ -151,7 +151,7 @@ background-color: #1f7060;
 }
 .btn-outline-primary.green:hover {
     background-color: #31B096;
-    color: #153559;
+    color: #fff;
 }
 
 /**Icon btn**/
