--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -82,6 +82,9 @@ p {
     line-height: 1.7;
     color: #153559;
 }
+p.small {
+    font-size: .9em;
+}
 
 li {
     font-family: 'Roboto', 'open sans', sans-serif;
